doc/k8syaml/demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-0
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: claimdemo
  template:
    metadata:
      labels:
        app: claimdemo
    spec:
      #  nodeName: node1
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      #拉取harbor远程镜像使用
      imagePullSecrets:
      - name: registry-harbor
      containers:
      - name: claimdemo
        image: 172.19.68.11:5000/claimdev/claimdemo:7
        imagePullPolicy: Always #每次都检查
        ports:
        - name: http
          containerPort: 8051
          hostPort: 8051
        livenessProbe:
          tcpSocket:
            port: 8051
          initialDelaySeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8051
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
        #挂载到容器内部的存储卷配置
        volumeMounts:
        #引用pod定义的共享存储卷的名称，需用volumes[]部分定义的卷名
        - name: demologs
          #存储卷在容器内mount的绝对路径，应少于512字符
          mountPath: /opt/dev/log/claimdemo
      #在该pod上定义共享存储卷列表
      volumes:
      - name: demologs
        #挂载来源 表示挂载pod所在宿主机的目录
        hostPath:
          path: /home/k8s/claimdemo/logs/
---
apiVersion: v1
kind: Service
metadata:
  name: claimdemo
  namespace: default
  labels:
    app: claimdemo
spec:
  ports:
  - port: 8051
    name: claimdemo
    targetPort: 8051
  selector:
    app: claimdemo
